templates/manifests/alertmanager/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: internal-monitoring
  name: internal-alertmanager-api
spec:
  selector:
    app.kubernetes.io/name: alertmanager
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9093
